--- a/OpenGLTraining/OpenGLTraining.vcxproj
+++ b/OpenGLTraining/OpenGLTraining.vcxproj
@@ -105,13 +105,13 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
-      <AdditionalIncludeDirectories>C:\Users\br31427\Documents\Visual Studio 2019\Libraries\GLAD\include;C:\Users\br31427\Documents\Visual Studio 2019\Libraries\glm;C:\Users\br31427\Documents\Visual Studio 2019\Libraries\glfw-3.3.7.bin.WIN64\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\br31427\source\repos\assimp\include;C:\Users\br31427\Documents\Visual Studio 2019\Libraries\GLAD\include;C:\Users\br31427\Documents\Visual Studio 2019\Libraries\glm;C:\Users\br31427\Documents\Visual Studio 2019\Libraries\glfw-3.3.7.bin.WIN64\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\br31427\Documents\Visual Studio 2019\Libraries\glfw-3.3.7.bin.WIN64\lib-vc2022;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glfw3.lib;glfw3dll.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\br31427\source\repos\assimp\lib\Release;C:\Users\br31427\source\repos\OpenGLTraining\imgui;C:\Users\br31427\Documents\Visual Studio 2019\Libraries\glfw-3.3.7.bin.WIN64\lib-vc2022;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;glfw3.lib;glfw3dll.lib;assimp-vc143-mt.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -123,26 +123,55 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
-      <AdditionalIncludeDirectories>C:\Users\br31427\Documents\Visual Studio 2019\Libraries\GLAD\include;C:\Users\br31427\Documents\Visual Studio 2019\Libraries\glm;C:\Users\br31427\Documents\Visual Studio 2019\Libraries\glfw-3.3.7.bin.WIN64\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\br31427\source\repos\assimp\include;C:\Users\br31427\Documents\Visual Studio 2019\Libraries\GLAD\include;C:\Users\br31427\Documents\Visual Studio 2019\Libraries\glm;C:\Users\br31427\Documents\Visual Studio 2019\Libraries\glfw-3.3.7.bin.WIN64\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\br31427\Documents\Visual Studio 2019\Libraries\glfw-3.3.7.bin.WIN64\lib-vc2022;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glfw3.lib;glfw3dll.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\br31427\source\repos\assimp\lib\Release;C:\Users\br31427\source\repos\OpenGLTraining\imgui;C:\Users\br31427\Documents\Visual Studio 2019\Libraries\glfw-3.3.7.bin.WIN64\lib-vc2022;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;glfw3.lib;glfw3dll.lib;assimp-vc143-mt.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\Documents\Visual Studio 2019\Libraries\GLAD\src\glad.c" />
+    <ClCompile Include="..\imgui\imgui.cpp" />
+    <ClCompile Include="..\imgui\imgui_demo.cpp" />
+    <ClCompile Include="..\imgui\imgui_draw.cpp" />
+    <ClCompile Include="..\imgui\imgui_impl_glfw.cpp" />
+    <ClCompile Include="..\imgui\imgui_impl_opengl3.cpp" />
+    <ClCompile Include="..\imgui\imgui_tables.cpp" />
+    <ClCompile Include="..\imgui\imgui_widgets.cpp" />
     <ClCompile Include="OpenGLTraining.cpp" />
     <ClCompile Include="Source\callbacks.cpp" />
+    <ClCompile Include="Source\camera.cpp" />
+    <ClCompile Include="Source\imgui_menu.cpp" />
+    <ClCompile Include="Source\rendering.cpp" />
+    <ClCompile Include="Source\shader_setup.cpp" />
     <ClCompile Include="Source\window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\imgui\imconfig.h" />
+    <ClInclude Include="..\imgui\imgui.h" />
+    <ClInclude Include="..\imgui\imgui_impl_glfw.h" />
+    <ClInclude Include="..\imgui\imgui_impl_opengl3.h" />
+    <ClInclude Include="..\imgui\imgui_impl_opengl3_loader.h" />
+    <ClInclude Include="..\imgui\imgui_internal.h" />
+    <ClInclude Include="..\imgui\imstb_rectpack.h" />
+    <ClInclude Include="..\imgui\imstb_textedit.h" />
+    <ClInclude Include="..\imgui\imstb_truetype.h" />
     <ClInclude Include="Headers\callbacks.h" />
+    <ClInclude Include="Headers\camera.h" />
+    <ClInclude Include="Headers\imgui_menu.h" />
+    <ClInclude Include="Headers\rendering.h" />
+    <ClInclude Include="Headers\shader_setup.h" />
+    <ClInclude Include="Headers\stb_image.h" />
     <ClInclude Include="Headers\window.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Source\Shaders\simple_triangle.frag" />
+    <None Include="Source\Shaders\simple_triangle.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
