--- a/OpenGLTraining/imgui.ini
+++ b/OpenGLTraining/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Test]
-Pos=60,60
-Size=318,306
+Pos=47,140
+Size=466,409
+Collapsed=0
+
+[Window][aaa]
+Pos=462,268
+Size=128,139
 Collapsed=0
 
