--- a/OpenGLTraining/OpenGLTraining.vcxproj
+++ b/OpenGLTraining/OpenGLTraining.vcxproj
@@ -110,7 +110,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\br31427\source\repos\assimp\lib\Release;C:\Users\br31427\source\repos\OpenGLTraining\imgui;C:\Users\br31427\Documents\Visual Studio 2019\Libraries\glfw-3.3.7.bin.WIN64\lib-vc2022;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\br31427\source\repos\assimp\bin\Release;C:\Users\br31427\source\repos\assimp\lib\Release;C:\Users\br31427\source\repos\OpenGLTraining\imgui;C:\Users\br31427\Documents\Visual Studio 2019\Libraries\glfw-3.3.7.bin.WIN64\lib-vc2022;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>opengl32.lib;glfw3.lib;glfw3dll.lib;assimp-vc143-mt.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -130,7 +130,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\br31427\source\repos\assimp\lib\Release;C:\Users\br31427\source\repos\OpenGLTraining\imgui;C:\Users\br31427\Documents\Visual Studio 2019\Libraries\glfw-3.3.7.bin.WIN64\lib-vc2022;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\br31427\source\repos\assimp\bin\Release;C:\Users\br31427\source\repos\assimp\lib\Release;C:\Users\br31427\source\repos\OpenGLTraining\imgui;C:\Users\br31427\Documents\Visual Studio 2019\Libraries\glfw-3.3.7.bin.WIN64\lib-vc2022;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>opengl32.lib;glfw3.lib;glfw3dll.lib;assimp-vc143-mt.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -144,11 +144,14 @@
     <ClCompile Include="..\imgui\imgui_tables.cpp" />
     <ClCompile Include="..\imgui\imgui_widgets.cpp" />
     <ClCompile Include="OpenGLTraining.cpp" />
+    <ClCompile Include="Source\Application.cpp" />
     <ClCompile Include="Source\callbacks.cpp" />
     <ClCompile Include="Source\camera.cpp" />
     <ClCompile Include="Source\imgui_menu.cpp" />
-    <ClCompile Include="Source\rendering.cpp" />
-    <ClCompile Include="Source\shader_setup.cpp" />
+    <ClCompile Include="Source\mesh.cpp" />
+    <ClCompile Include="Source\model.cpp" />
+    <ClCompile Include="Source\shader.cpp" />
+    <ClCompile Include="Source\texture.cpp" />
     <ClCompile Include="Source\window.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -161,17 +164,20 @@
     <ClInclude Include="..\imgui\imstb_rectpack.h" />
     <ClInclude Include="..\imgui\imstb_textedit.h" />
     <ClInclude Include="..\imgui\imstb_truetype.h" />
+    <ClInclude Include="Headers\Application.h" />
     <ClInclude Include="Headers\callbacks.h" />
     <ClInclude Include="Headers\camera.h" />
     <ClInclude Include="Headers\imgui_menu.h" />
-    <ClInclude Include="Headers\rendering.h" />
-    <ClInclude Include="Headers\shader_setup.h" />
+    <ClInclude Include="Headers\mesh.h" />
+    <ClInclude Include="Headers\model.h" />
+    <ClInclude Include="Headers\shader.h" />
     <ClInclude Include="Headers\stb_image.h" />
+    <ClInclude Include="Headers\texture.h" />
     <ClInclude Include="Headers\window.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Source\Shaders\simple_triangle.frag" />
-    <None Include="Source\Shaders\simple_triangle.vert" />
+    <None Include="Source\Shaders\simple_phong.frag" />
+    <None Include="Source\Shaders\simple_phong.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
